# Cpps

Dexter/: aruco_viewer.py  color_marker_viewer.py  debug_camera.sh  test_aruco_window.py  test_pick_box.py
Dexter/dexter_bringup/launch/: simulated_robot.launch.py
Dexter/dexter_description/: CMakeLists.txt
Dexter/dexter_description/launch/: gazebo.launch.py
Dexter/dexter_description/scripts/: generate_aruco_textures.py
Dexter/dexter_description/urdf/: dexter.urdf.xacro  dexter_gazebo.xacro
Dexter/dexter_description/worlds/: inventory.sdf
Dexter/dexter_inventory/: setup.cfg  setup.py
Dexter/dexter_inventory/dexter_inventory/: aruco_box_detector.py  dispatch_engine.py  inventory_db.py  inventory_node.py  standalone_dashboard.py  visual_servo_node.py
Dexter/dexter_inventory/launch/: inventory.launch.py
Dexter/dexter_moveit/config/: planning_python_api.yaml
Dexter/dexter_msgs/: CMakeLists.txt
Dexter/dexter_msgs/srv/: AddItem.srv  DispatchItem.srv
Dexter/dexter_remote/: CMakeLists.txt  package.xml
Dexter/dexter_remote/dexter_remote/: web_interface.py
Dexter/dexter_remote/templates/: index.html
Dexter/install/: local_setup.sh  setup.sh
Dexter/install/dexter_bringup/share/dexter_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Dexter/install/dexter_controller/lib/dexter_controller/: slider_control.py
Dexter/install/dexter_controller/share/dexter_controller/: dexter_controller.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Dexter/install/dexter_cpp_examples/lib/dexter_cpp_examples/: simple_action_client_node  simple_action_server_node  simple_moveit_interface  simple_parameter  simple_publisher  simple_service_client  simple_service_server
Dexter/install/dexter_cpp_examples/share/dexter_cpp_examples/: local_setup.sh  package.sh
Dexter/install/dexter_description/share/dexter_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Dexter/install/dexter_firmware/lib/dexter_firmware/: simple_serial_receiver  simple_serial_receiver.py
Dexter/install/dexter_firmware/share/dexter_firmware/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
Dexter/install/dexter_inventory/lib/dexter_inventory/: aruco_box_detector  inventory_node  seed_data  standalone_dashboard  visual_servo_node
Dexter/install/dexter_inventory/share/dexter_inventory/: package.bash  package.dsv  package.sh  package.xml  package.zsh
Dexter/install/dexter_inventory/share/dexter_inventory/launch/: inventory.launch.py
Dexter/install/dexter_inventory/share/dexter_inventory/templates/: index.html
Dexter/install/dexter_moveit/share/dexter_moveit/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Dexter/install/dexter_msgs/share/dexter_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Dexter/install/dexter_py_examples/share/dexter_py_examples/: package.sh
Dexter/install/dexter_remote/lib/dexter_remote/: task_server.py  task_server_node  web_interface.py
Dexter/install/dexter_remote/share/dexter_remote/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Dexter/log/: latest_build  latest_list
(+242 files in other folders)
