<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dexter_inventory</name>
  <version>0.1.0</version>
  <description>
    FEFO/FIFO inventory management system for the Dexter robotic arm.
    Features:
    - First-In-First-Out (FIFO) dispatch mode
    - First-Expiry-First-Out (FEFO) dispatch mode
    - SQLite persistence with RFID tag support
    - ML-powered demand forecasting
    - ROS 2 node that drives the arm via MoveIt 2
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>dexter_msgs</depend>
  
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend condition="$ROS_DISTRO >= iron">moveit_py</exec_depend>
  <exec_depend>dexter_moveit</exec_depend>
  <exec_depend>dexter_description</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
